# wasmir

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  rustfmt.toml
.wasmir/my_module/: Cargo.toml
.wasmir/my_module/src/: lib.rs
src/: lib.rs  main.rs
