[package]
name = "wasmir"
version = "0.1.12"
edition = "2018"
authors = ["anyusernameworks"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/anyusernameworks/wasmir"
description = "A library for automating statically linking WASM binaries."


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.72", features = ["full", "extra-traits"] }
quote = "1.0.9"
proc-macro2 = "1.0.27"
toml = "0.5.8"
wasm-bindgen = "0.2.74"
